<resources>
    <string name="app_name">Kanban Board</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_in_hear">Sign In Hear</string>
    <string name="todo_task">Todo Task</string>
    <string name="spent">Spent:</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="no_in_progress_tasks">No In Progress Tasks</string>
    <string name="no_completed_tasks">No Completed Tasks</string>
    <string name="in_progress_tasks">In Progress Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please Wait</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="no_data_found">No Data Found</string>
    <string name="pause">Pause</string>
    <string name="complete">Complete</string>
    <string name="completes_tasks">Completes Tasks</string>
    <string name="export">Export</string>
    <string name="view_all">View All</string>
    <string name="logout">Logout</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update\n</string>
    <string name="show_all">Show All</string>
</resources>