<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_200dp"
            android:layout_marginTop="@dimen/_20dp"
            android:src="@drawable/ic_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/BoldTextMontserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeErrorColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/RegularTextMontserrat"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:hint="@string/password"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/RegularTextMontserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/BoldTextMontserrat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                app:backgroundTint="@color/blue1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30dp"
                android:layout_marginVertical="@dimen/_15dp"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:layout_weight="1"
                    android:background="@color/grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/RegularTextMontserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:text="@string/or"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:layout_weight="1"
                    android:background="@color/grey" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignInGoogle"
                style="@style/BoldTextMontserrat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60dp"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                app:backgroundTint="@color/grey3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MediumTextMontserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="@dimen/_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSignUpNow"
                style="@style/BoldTextMontserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/sign_up_now"
                android:textColor="@color/blue1"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>