<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300dp"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_3dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="@dimen/_0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="@dimen/_12dp"
            android:layout_height="match_parent"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/BoldTextMontserrat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                style="@style/RegularTextMontserrat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/grey1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="vertical"
                android:gravity="center_vertical|end">

                <LinearLayout
                    android:id="@+id/llSpentTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSpent"
                        style="@style/MediumTextMontserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00_00"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:gravity="end">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnPause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/grey3"
                        app:cardElevation="@dimen/_0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_8dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/BoldTextMontserrat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pause"
                                android:textSize="@dimen/_12sp"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        app:cardBackgroundColor="@color/blue1"
                        app:cardElevation="@dimen/_0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_8dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/BoldTextMontserrat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/complete"
                                android:textSize="@dimen/_12sp"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>