<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                style="@style/TopBarIcon"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/BoldTextMontserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_toEndOf="@+id/btnBack"
                android:text="@string/completes_tasks"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ViewAnimator
                android:id="@+id/vaCompleteTask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginTop="@dimen/_10dp">

                <!--0-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="@dimen/_0dp"
                    app:strokeWidth="@dimen/_0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/blue"
                            android:visibility="visible" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!--1-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="@dimen/_0dp"
                    app:strokeWidth="@dimen/_0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/RegularTextMontserrat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10dp"
                            android:text="@string/no_completed_tasks" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!--2-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCompleteTask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/_100dp"
                    android:clipToPadding="false" />

                <!--3-->
                <include layout="@layout/layout_no_data" />

            </ViewAnimator>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/blue"
                android:layout_marginBottom="@dimen/_30dp"
                android:layout_marginStart="@dimen/_15dp"
                app:cardElevation="@dimen/_0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15dp"
                    android:paddingHorizontal="@dimen/_30dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_export"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MediumTextMontserrat"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_height="wrap_content"
                        android:text="@string/export"
                        android:textSize="@dimen/_14sp"
                        android:textColor="@color/white" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>